--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -12,6 +12,12 @@
   margin-top: 100px;
 }
 
+.confirm-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .confirm-button {
   margin-top: 100px;
   background-color: var(--background-secundary);
