--- a/src/components/NumberSetter/styles.css
+++ b/src/components/NumberSetter/styles.css
@@ -45,6 +45,7 @@
 }
 
 .data-field input {
+  display: flex;
   height: 100%;
   border-radius: 10px;
   background-color: var(--background-secundary);
